--- a/solidity-example/js/package.json
+++ b/solidity-example/js/package.json
@@ -1,7 +1,8 @@
 {
   "name": "js",
   "scripts": {
-    "generate-proof": "ts-node generate-proof.ts"
+    "generate-proof": "ts-node generate-proof.ts",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@aztec/bb.js": "^0.82.2",
@@ -9,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "prettier": "3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
